@@ -154,6 +154,8 @@ DECLARE FUNCTION SliceTypeName OVERLOAD (t AS SliceTypes) AS STRING
 DECLARE Sub RefreshSliceScreenPos(byval sl as slice ptr)
 DECLARE Function SliceXAnchor(BYVAL sl AS Slice Ptr) AS INTEGER
 DECLARE Function SliceYAnchor(BYVAL sl AS Slice Ptr) AS INTEGER
+DECLARE Function SliceCollide(byval sl1 as Slice Ptr, sl2 as Slice Ptr) as integer
+DECLARE Function SliceCollidePoint(byval sl as Slice Ptr, byval x as integer, byval y as integer) as integer
 
 DECLARE FUNCTION NewSliceOfType (BYVAL t AS SliceTypes, BYVAL parent AS Slice Ptr=0) AS Slice Ptr
 
